syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cartobucket.auth.rpc";
option java_outer_classname = "UserProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";


service Users {
  rpc CreateUser (UserCreateRequest) returns (UserCreateResponse) {};
  rpc ListUsers (UserListRequest) returns (UserListResponse) {};
  rpc DeleteUser (UserDeleteRequest) returns (UserResponse) {};
  rpc UpdateUser (UserUpdateRequest) returns (UserResponse) {};
  rpc GetUser (UserGetRequest) returns (UserResponse) {};
  rpc SetUserPassword (UserSetPasswordRequest) returns (UserSetPasswordResponse) {};
}

message UserCreateRequest {
  string authorizationServerId = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Struct profile = 5;
}

message UserListRequest {
  repeated string authorizationServerIds = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message UserDeleteRequest {
  string id = 1;
}

message UserUpdateRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Struct profile = 4;
}

message UserGetRequest {
  string id = 1;
}

message UserSetPasswordRequest {
  string id = 1;
  string password = 2;
}


message UserCreateResponse {
  string id = 1;
  string authorizationServerId = 2;
  string username = 3;
  string email = 4;
  string passwordHash = 5;
  google.protobuf.Struct profile = 6;
  google.protobuf.Timestamp createdOn = 7;
  google.protobuf.Timestamp updatedOn = 8;
}

message UserResponse {
  string id = 1;
  string authorizationServerId = 2;
  string username = 3;
  string email = 4;
  string passwordHash = 5;
  google.protobuf.Struct profile = 6;
  google.protobuf.Timestamp createdOn = 7;
  google.protobuf.Timestamp updatedOn = 8;
}

message UserListResponse {
  repeated UserResponse users = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message UserSetPasswordResponse {
  string passwordHash = 1;
}